# morf-nkjp

./: LICENSE  README.md  morf-ncp.cabal  stack.yaml
src/NLP/: MorfNCP.hs
src/NLP/MorfNCP/: Base.hs  DAG.hs  Dummy.hs  MSD.hs  Morfeusz.hs  NCP.hs  Show.hs
tools/: morf-ncp-dummy.hs  morf-ncp.hs
