name:               morf-ncp
version:            0.1.0
synopsis:           Reconciling NCP with Morfeusz
description:
    Reconciling National Corpus of Polish (NCP) with the inflection graphcs
    produced by Morfeusz.
license:            BSD2
license-file:       LICENSE
cabal-version:      >= 1.10
copyright:          Copyright (c) 2016 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Data
homepage:           https://github.com/kawu/morf-nkjp
build-type:         Simple

library
    hs-source-dirs: src
    build-depends:
        base                >= 4        && < 5
      , containers          >= 0.4      && < 0.6
      , morfeusz            >= 2.0      && < 2.1
      , text                >= 0.11     && < 1.3
      , nkjp                >= 0.5      && < 0.6
      , pedestrian-dag      >= 0.1      && < 0.2
      , attoparsec          >= 0.13     && < 0.14
      , tagset-positional   >= 0.3      && < 0.4
      , data-memocombinators >= 0.5     && < 0.6
      , filepath            >= 1.4      && < 1.5

    exposed-modules:
        NLP.MorfNCP
      , NLP.MorfNCP.Base
      , NLP.MorfNCP.MSD
      , NLP.MorfNCP.Show
      , NLP.MorfNCP.NCP
      , NLP.MorfNCP.Morfeusz

      -- Provisional
      , NLP.MorfNCP.Dummy

    -- other-modules:

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/morf-nkjp.git

executable morf-ncp
    build-depends:
        morf-ncp
      , base                >= 4        && < 5
    hs-source-dirs: tools
    main-is: morf-ncp.hs
    ghc-options: -Wall -O2 -threaded -rtsopts

executable morf-ncp-dummy
    build-depends:
        morf-ncp
      , base                >= 4        && < 5
    hs-source-dirs: tools
    main-is: morf-ncp-dummy.hs
    ghc-options: -Wall -O2 -threaded -rtsopts
